--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "wed-testat",
-  "version": "0.0.0",
-  "private": true,
+  "name": "testat",
+  "version": "1.0.0",
+  "description": "CAS FEE Demo",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node --experimental-modules --es-module-specifier-resolution=node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
+  "author": "zartan",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "hbs": "~4.0.4",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "nedb": "^1.8.0",
+    "nedb-promise": "^2.0.1"
   }
 }
