--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-hbs": "^2.1.2",
+    "handlebars.moment": "^1.0.4",
     "method-override": "^3.0.0",
     "nedb": "^1.8.0",
     "nedb-promise": "^2.0.1"
